--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
             cursor: pointer;
             user-select: none;
             margin-bottom: 10px;
+			-webkit-tap-highlight-color: transparent;
+		    user-select: none;
+		    -webkit-user-select: none;
+		    -moz-user-select: none;
+		    -ms-user-select: none;
+		    outline: none; /* 避免focus外框 */
         }
 
         .inner {
