--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             display: block;
             font-size: 72px;
             line-height: 1;
+			margin-bottom: 10px;
         }
 
         #logo h1 {
